# boson

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  bacon.toml  example_config.toml  justfile
.github/workflows/: binary.yml  release-bin.yml  release.yml
assets/: compatibilitytool.vdf  package.json  register-hook.js  toolmanifest.vdf
assets/data/: balatro.toml
assets/lib/: .gitignore  greenworks.js  steamworksjs.js
scripts/: build_steamworksjs.sh
src/: cli.rs  config.rs  main.rs  path_search.rs  runtime.rs  util.rs
src/data/: electron_ver.rs  greenworks.rs  mod.rs
